--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -22,3 +22,6 @@ jobs:
 
     - name: Build with Maven
       run: mvn clean install
+
+    - name: SonarQube analysis
+      run : mvn sonar:sonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
