--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -24,12 +24,13 @@ jobs:
       run: mvn clean install
 
     - name: SonarQube analysis
-      run : mvn sonar:sonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      run: mvn sonar:sonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
-     - name: Deploy to Tomcat
-        uses: appleboy/tomcat-deploy@v2
-        with:
-          host: ${{ secrets.TOMCAT_HOST }}
-          port: ${{ secrets.TOMCAT_SSH_PORT }} 
-          local_file: './target/sample.war'
-          remote_file: 'vvdn@172.20.10.8:/home/vvdn/Tomcat/apache-tomcat-9.0.46/webapps/sample.war'
+    - name: Deploy to Tomcat
+      uses: appleboy/tomcat-deploy@v2
+      with:
+        host: ${{ secrets.TOMCAT_HOST }}
+        port: ${{ secrets.TOMCAT_SSH_PORT }}
+        local_file: './target/sample.war'
+        remote_file: '/home/vvdn/Tomcat/apache-tomcat-9.0.46/webapps/sample.war'
+        username: 'vvdn'
