--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -1,29 +1,25 @@
 name: Build Maven Project with Java 8
-
 on:
   push:
     branches:
       - main
-
 jobs:
   build:
 
+    runs-on: ubuntu-latest
     runs-on: self-hosted
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-
     - name: Set up JDK
       uses: actions/setup-java@v2
       with:
         distribution: 'adopt'
         java-version: '8'
-
     - name: Build with Maven
       run: mvn clean install
-
     - name: SonarQube analysis
-      run: mvn sonar:sonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      run : mvn sonar:sonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
   
