--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -29,7 +29,7 @@ jobs:
     - name: print out example job
       uses: appleboy/ssh-action@v0.1.10
       with:
-          host: ${{ inputs.hostname }}
+          host: ${{ secrets.HOSTNAME }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
