--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -28,7 +28,12 @@ jobs:
           key: ${{ secrets.KEY }}
           command_timeout: 30m
           script: | 
+            mkdir example_folder
             echo "Nice Job!!!"
+            
+  
+
+    
         
 
   
