--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -29,7 +29,7 @@ jobs:
           command_timeout: 30m
           script: | 
             mkdir example_folder
-            echo "Nice Job!!!"
+            echo "Folder 'example_folder' created successfully."
             
   
 
