--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -18,6 +18,11 @@ jobs:
 
     - name: Build with Maven
       run: mvn clean install     
+
+    - name: Transfer build file to remote server
+      run: scp -i /root/.ssh/viki_rsa target/*.war ${{ secrets.USERNAME }}@${{ secrets.HOSTNAME }}:/home/vvdn/
+
+
         
     - name: Set up SSH
       uses: appleboy/ssh-action@v0.1.10
