--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -19,9 +19,11 @@ jobs:
     - name: Build with Maven
       run: mvn clean install     
 
-    - name: Transfer build file to remote server
+    - name: Transfer build file to remote server2
       run: scp -i /root/.ssh/viki_rsa target/*.war ${{ secrets.USERNAME }}@${{ secrets.HOSTNAME_2 }}:/home/vvdn/
 
+    - name: Transfer build file to remote server1
+      run: scp -i /root/.ssh/viki_rsa target/*.war ${{ secrets.USERNAME }}@${{ secrets.HOSTNAME }}:/home/vvdn/
 
     - name: Set up SSH to remote 2
       uses: appleboy/ssh-action@v0.1.10
@@ -34,6 +36,18 @@ jobs:
           script: | 
             mkdir example_folder
             echo "Folder 'example_folder' created successfully."  
+
+    - name: Set up SSH to remote 1
+      uses: appleboy/ssh-action@v0.1.10
+      with:
+          host: ${{ secrets.HOSTNAME }}
+          port: ${{secrets.PORT}}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          command_timeout: 30m
+          script: | 
+            mkdir example_folder
+            echo "Folder 'example_folder' created successfully."
             
    
 
