--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -19,23 +19,9 @@ jobs:
     - name: Build with Maven
       run: mvn clean install     
 
-    - name: Transfer build file to remote server2
-      run: scp -i /root/.ssh/viki_rsa target/*.war ${{ secrets.USERNAME }}@${{ secrets.HOSTNAME_2 }}:/home/vvdn/
-
     - name: Transfer build file to remote server1
       run: scp -i /root/.ssh/viki_rsa target/*.war ${{ secrets.USERNAME }}@${{ secrets.HOSTNAME }}:/home/vvdn/
 
-    - name: Set up SSH to remote 2
-      uses: appleboy/ssh-action@v0.1.10
-      with:
-          host: ${{ secrets.HOSTNAME_2 }}
-          port: ${{secrets.PORT}}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.KEY_2 }}
-          command_timeout: 30m
-          script: | 
-            mkdir example_folder
-            echo "Folder 'example_folder' created successfully."  
 
     - name: Set up SSH to remote 1
       uses: appleboy/ssh-action@v0.1.10
@@ -46,8 +32,10 @@ jobs:
           key: ${{ secrets.KEY }}
           command_timeout: 30m
           script: | 
-            mkdir example_folder
-            echo "Folder 'example_folder' created successfully."
+            ./home/vvdn/Documents/apache-tomcat-9.0.73/shutdown.sh
+            cp /home/vvdn/*.war /home/vvdn/Documents/apache-tomcat-9.0.73/webapps/
+            ./home/vvdn/Documents/apache-tomcat-9.0.73/startup.sh
+            tail -2f ./home/vvdn/Documents/apache-tomcat-9.0.73/logs/catalina.out
             
    
 
