--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -1,40 +1,63 @@
 name: Build Maven Project with Java 8
+
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      target-branch:
+        description: 'Target branch for manual run'
+        required: false
+        default: 'main'
+      
 jobs:
   build:
     runs-on: self-hosted
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Set up JDK
-      uses: actions/setup-java@v2
-      with:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
           distribution: 'adopt'
           java-version: '8'
 
-    - name: Build with Maven
-      run: mvn clean install     
+      - name: Build with Maven
+        run: mvn clean install     
 
-    - name: Local Deployment
-      run: |
-        cp target/*.war /home/vvdn/Documents/
-        cd /home/vvdn/Tomcat/apache-tomcat-9.0.73/bin
-        ./shutdown.sh
-        sleep 15
-        cp /home/vvdn/Documents/*.war /home/vvdn/Tomcat/apache-tomcat-9.0.73/webapps/
-        ./startup.sh
+      - name: Local Deployment
+        run: |
+          cp target/*.war /home/vvdn/Documents/
+          cd /home/vvdn/Tomcat/apache-tomcat-9.0.73/bin
+          ./shutdown.sh
+          sleep 15
+          cp /home/vvdn/Documents/*.war /home/vvdn/Tomcat/apache-tomcat-9.0.73/webapps/
+          ./startup.sh
         
+  await_approval:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.event_name == 'workflow_dispatch'
 
-    - name: Transfer build file to remote server2
-      run: scp -i /root/.ssh/viki_rsa target/*.war ${{ secrets.USERNAME }}@${{ secrets.HOSTNAME_2 }}:/home/vvdn/
+    steps:
+      - name: Request approval
+        uses: peter-evans/wait-for-approval@v2
+        with:
+          message: "Approve to continue deployment"
+          approvals: 1
 
-    - name: Set up SSH to remote 2
-      uses: appleboy/ssh-action@v0.1.10
-      with:
+  transfer_and_remote_setup:
+    runs-on: ubuntu-latest
+    needs: await_approval
+    if: github.event_name == 'workflow_dispatch'
+
+    steps:
+      - name: Transfer build file to remote server2
+        run: scp -i /root/.ssh/viki_rsa target/*.war ${{ secrets.USERNAME }}@${{ secrets.HOSTNAME_2 }}:/home/vvdn/
+
+      - name: Set up SSH to remote 2
+        uses: appleboy/ssh-action@v0.1.10
+        with:
           host: ${{ secrets.HOSTNAME_2 }}
           port: ${{secrets.PORT}}
           username: ${{ secrets.USERNAME }}
@@ -50,21 +73,3 @@ jobs:
             cp /home/vvdn/*.war /home/vvdn/Documents/apache/apache-tomcat-9.0.73/webapps/
             ./startup.sh
             pwd
-            
-
-
-
-
-            
-            
-            
-   
-
-    
-            
-  
-
-    
-        
-
-  
