--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -20,9 +20,10 @@ jobs:
     - name: Local Deployment
       run: |
         cp target/*.war /home/vvdn/Documents/
-        cd /home/vvdn/Tomcat/apache-tomcat-9.0.73/bin
+        cd /home/vvdn/Tomcat/apache-tomcat-9.0.73/bin/
+        pwd
         ./shutdown.sh
-        sleep 30
+        sleep 60
         cp /home/vvdn/Documents/*.war /home/vvdn/Tomcat/apache-tomcat-9.0.73/webapps/
         ./startup.sh
         
