--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -21,6 +21,13 @@ jobs:
       run: |
         cp target/*.war /home/vvdn/Documents/
         cd /home/vvdn/Tomcat/apache-tomcat-9.0.73/bin/
+        TOMCAT_PID=$(ps aux | grep '[c]atalina' | awk '{print $2}')
+        if [ -n "$TOMCAT_PID" ]; then
+          echo "Tomcat is running with PID $TOMCAT_PID. Shutting down..."
+          kill -9 $TOMCAT_PID
+        else
+          echo "Tomcat is not running."
+        fi
         pwd
         ./shutdown.sh
         sleep 60
