--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -21,7 +21,7 @@ jobs:
       run: |
         cp target/*.war /home/vvdn/Documents/
         cd /home/vvdn/Tomcat/apache-tomcat-9.0.73/bin/
-        echo "Vickey\$1234" | sudo -S su -c "
+        echo 'Vickey$1234' | sudo -S su -c "
           TOMCAT_PID=\$(ps aux | grep '[c]atalina' | awk '{print \$2}')
           if [ -n \"\$TOMCAT_PID\" ]; then
             echo \"Tomcat is running with PID \$TOMCAT_PID. Shutting down...\"
