--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -17,6 +17,11 @@ jobs:
     - name: Build with Maven
       run: mvn clean install     
 
+    - name: SonarQube Scan
+      run: mvn sonar:sonar -Dsonar.login=$SONAR_TOKEN
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
     - name: Local Deployment
       run: |
         cp target/*.war /home/vvdn/Documents/
