--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: sample
-          path: target/*.war
+          path: /home/runner/work/sampleAction/sampleAction/target/*.war
     
   DeployDevJumpServer:
     name: Deploy to Dev-Jump Server
