--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   JumpBoxDeploy:
-    name: Jump Box Env
+    name: Deploy to Dev JumpBox Server
     if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     environment: 
