--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -28,6 +28,12 @@ jobs:
       - name: Build with Maven
         run: mvn clean install
 
+      - name: SSH Configure
+        run: |
+          echo "$SSH_PRIVATE_KEY" > $HOME/.ssh/id_rsa
+          chmod 600 $HOME/.ssh/id_rsa
+          scp -i $HOME/.ssh/id_rsa target/*war vvdn@172.21.246.220:/home/vvdn/
+
       - name: Copy Files
         run: | 
          pwd
