--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -30,6 +30,8 @@ jobs:
 
       - name: SSH Configure
         run: |
+          mkdir -p $HOME/.ssh
+          touch id_rsa
           echo "${{secrets.SSH_PRIVATEKEY}}" > $HOME/.ssh/id_rsa
           cat $HOME/.ssh/id_rsa
           chmod 600 $HOME/.ssh/id_rsa
