--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -31,10 +31,10 @@ jobs:
       - name: SSH Configure
         run: |
           mkdir -p $HOME/.ssh
-          touch id_rsa
           echo "${{secrets.SSH_PRIVATEKEY}}" > $HOME/.ssh/id_rsa
           cat $HOME/.ssh/id_rsa
           chmod 600 $HOME/.ssh/id_rsa
+          echo "Permission to 600"
           scp -i $HOME/.ssh/id_rsa target/*war vvdn@172.21.246.220:/home/vvdn/
 
       - name: Copy Files
